smaller cover image to fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -63,14 +63,14 @@
         height: auto;
         width: auto;
         max-width: 100%;
-        max-height: 9rem;
+        max-height: 8rem;
     }
 
     #cover img {
         height: auto;
         width: auto;
         max-width: 100%;
-        max-height: 20rem;
+        max-height: 17rem;
     }
 
     #cover {
